--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack-p",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "webpack --config webpack.dev.js",
+    "devStart": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "reactStart":"react-scripts start"
+    "reactStart": "react-scripts start"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack-merge": "^5.8.0"
